--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -4,7 +4,7 @@ PORT=3001
 API_VERSION=v1
 
 # Database
-DATABASE_URL="postgresql://username:password@localhost:5432/systemize?schema=public"
+DATABASE_URL="postgresql://systemize:dev_password_123@localhost:5432/systemize_dev?schema=public"
 
 # Redis Cache
 REDIS_URL="redis://localhost:6379"
