--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -15,7 +15,9 @@
     "gentoken": "tsx scripts/generate-test-token.ts",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
-    "prisma:studio": "prisma studio"
+    "prisma:studio": "prisma studio",
+    "prisma:seed": "tsx prisma/seed.ts",
+    "db:reset": "prisma migrate reset --force"
   },
   "keywords": ["systemize", "productivity", "api"],
   "author": "",
@@ -57,6 +59,9 @@
     "tsx": "^4.7.0",
     "typescript": "^5.3.3",
     "prisma": "^5.7.1"
+  },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
   },
   "engines": {
     "node": ">=20.0.0"
